# Mandelbrot

./: .gitignore  CMakeLists.txt  README.md  mass_render.py  view.sh
include/: combine.hpp  mandelbrot.hpp
src/: combine.cpp  main.cpp  mandelbrot.cpp  progress.hpp
tests/: test_mandelbrot.cpp
viewer/: Dockerfile  viewer.html
